@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>Kintsugi3D</groupId>
     <artifactId>Kintsugi3DBuilder</artifactId>
-    <version>0.3.3</version>
+    <version>0.3.5</version>
     <packaging>jar</packaging>
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -26,6 +26,10 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.desktop/sun.java2d.cmm=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
                 <executions>
                     <execution>
